# rustywoof

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  install.sh  mkdocs.yml
.github/workflows/: pages.yml  release.yml
docs/: book.toml  index.md
docs/cli/: README.md  audit.md  check.md  help.md  hook.md  init.md  patrol.md  remediate.md  scan.md  update.md
docs/concepts/: README.md  perimeter-defense.md  secret-scanning.md  supply-chain.md
docs/config/: README.md  custom-rules.md  woof-toml.md
docs/getting-started/: README.md  features.md  installation.md  what-is-rustywoof.md
docs/src/: README.md  SUMMARY.md
docs/src/cli/: README.md  audit.md  check.md  hook.md  patrol.md  remediate.md  scan.md  update.md
docs/src/concepts/: README.md  perimeter-defense.md  secret-scanning.md  supply-chain.md
docs/src/config/: README.md  custom-rules.md  woof-toml.md
docs/src/intro/: installation.md
docs/stylesheets/: animations.css  dark-theme.css  landing.css  light-theme.css  terminal.css  typography.css
docs/typescripts/: extra.ts
src/: config.rs  error.rs  git.rs  main.rs  updater.rs
src/detector/: entropy.rs  mod.rs  rules.rs
src/scanner/: env_guard.rs  mod.rs
src/supply_chain/: mod.rs
wix/: main.wxs
