[package]
name = "rustywoof"
version = "0.1.8"
rust-version = "1.94"
edition = "2024"
description = "A blazing fast, relentless secret scanner & supply chain defensive tool. Written in Rust"
license = "MIT"
repository = "https://github.com/ianramy/rustywoof"
readme = "README.md"
homepage = "https://ianramy.co.ke/rustywoof"

authors = ["Ian Ramy <dev@ianramy.co.ke>"]

[package.metadata.wix]
upgrade-guid = "FCD8F69E-74ED-46F1-ABE6-88DAFB1C594C"
path-guid = "18D494BF-BD02-45E7-87A5-48C1D46450A7"
license = false
eula = false

[package.metadata.npm]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
    "x86_64-pc-windows-msvc"
]
[[bin]]
name = "woof"
path = "src/main.rs"

[dependencies]
# The undisputed king of CLI argument parsing in Rust
clap = { version = "4.5", features = ["derive"] }

# For blazing fast multi-threading
rayon = "1.10"

# For smart directory traversal that respects .gitignore
ignore = "0.4"

# For beautiful, clean error handling
anyhow = "1.0"

# The standard Rust progress bar crate
indicatif = "0.18"

# The official Rust Regex engine
regex = "1.10"

# The standard framework for serializing and deserializing Rust data structures
serde = { version = "1.0", features = ["derive"] }

# For parsing and writing TOML files (like configuration or manifest files)
toml = "1.1.2"

# A powerful HTTP client for making network requests (using the synchronous/blocking API here)
reqwest = { version = "0.13", features = ["blocking", "json"] }

# For gorgeous, highly detailed diagnostic error messages and snippets in the terminal
miette = { version = "7.6.0", features = ["fancy"] }

# A convenient macro crate to effortlessly define and manage custom error types
thiserror = "2.0.18"

# For effortlessly parsing JSON API responses or generating JSON output reports
serde_json = "1.0.149"

# For fast substring searching in large text data
aho-corasick = "1.1.4"

# For parsing and writing YAML files (like configuration or manifest files)
# Note: Changed `serde-yaml` to `serde-yml`
serde_yml = "0.0.12"

# For self-update functionality
self_update = { version = "0.44.0", features = ["archive-tar", "archive-zip"] }

[profile.release]
# Maximum performance optimization
opt-level = 3
# Link-time optimization (makes execution faster)
lto = true
# Maximizes LTO at the cost of slower compile times
codegen-units = 1
# Removes debug symbols to shrink the binary size
strip = true
# Improves performance and binary size
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
